Create mount point postinstall_oem and set context
ported from the CR (CR)

For mount oem_other image and copy preopted files from it.

Change-Id: Ic54931465408cc7e25d2edccf2e2f957496e3705
Signed-off-by: shenjun1 <shenjun1@motorola.com>
Signed-off-by: Kanagarathina Kalathi <kalathik@motorola.com>
Reviewed-on: https://gerrit.mot.com/1423747
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Tested-by: Jira Key
Submit-Approved: Jira Key

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -21,6 +21,7 @@ on early-init
 
     # Set the security context of /postinstall if present.
     restorecon /postinstall
+    restorecon /postinstall_oem
 
     chown system system /acct
     mkdir /acct/uid
