--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -817,6 +817,15 @@ on property:security.perf_harden=0
 on property:security.perf_harden=1
     write /proc/sys/kernel/perf_event_paranoid 3
 
+on property:sys.dbg.ffu_start=1
+    start emmc_ffu_start
+
+service emmc_ffu_start /system/bin/emmc_ffu_start.sh
+    user root
+    class late_start
+    oneshot
+    disabled
+
 on property:sys.dbg.ufs_ffu_start=1
     start ufs_ffu_start
 
