UFS FFU:init.rc:trigger FFU if sys.dbg.ufs_ffu_start set 1
Ported from the CR (CR)

On Android P, security protect has been strict,
we have to devide FFU into two parts.
1. ufs_ffu.sh, ufs_ffu_(vednorID).sh under /vendor/bin,
   to check if eMMC need upgrade FW;
2. ufs_ffu_start.sh under /system/bin,
   to do actual upgrade.
these two parts conmunicate with new property "sys.dbg.ufs_ffu_start".

Change-Id: If971b1009965bcedb03e941a7681811591fa5e0e
Reviewed-on: https://gerrit.mot.com/1303497
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Shi-Yong Li <a22381@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key
Reviewed-on: https://gerrit.mot.com/1378159
Reviewed-by: Vijayakumar Gn <vijaygn@motorola.com>
Reviewed-by: Chuanchun Zhu <zhucc2@motorola.com>
Reviewed-by: Guobin Zhang <zhanggb@motorola.com>

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -817,6 +817,15 @@ on property:security.perf_harden=0
 on property:security.perf_harden=1
     write /proc/sys/kernel/perf_event_paranoid 3
 
+on property:sys.dbg.ufs_ffu_start=1
+    start ufs_ffu_start
+
+service ufs_ffu_start /system/bin/ufs_ffu_start.sh
+    user root
+    class late_start
+    oneshot
+    disabled
+
 # on shutdown
 # In device's init.rc, this trigger can be used to do device-specific actions
 # before shutdown. e.g disable watchdog and mask error handling
