Show bootanimation after decrypt
Because the original modification (restart SF which is added
for display bootanimation) from O to P causes bootanimation NPE,
 we remove the part of restart SF and add other flow to show
 bootanimation.

Test: manual, ran the test 10 times and it cause no NPE and
      display BootAnimation after decrypt
Test: boot aosp_sailfish

Mot-CRs-fixed: (CR): Black screen during bootup

Restart SF is originally added by Google for restarting framwork after
FDE due to which we are oberving Blackscreen during Bootup. This fix
will remove restart SF and start bootanimation.
QC SR #03864964

Bug: 79547653
Change-Id: I66929a30a6f84a3aac19a25eb5e0e8714142178e

Signed-off-by: maheshmk <maheshmk@motorola.com>
Change-Id: I66929a30a6f84a3aac19a25eb5e0e8714142178e
Reviewed-on: https://gerrit.mot.com/1306331
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Ashwin Kumar Pathmudi <jfxr63@motorola.com>
Reviewed-by: Shuo Yan <shuoyan@motorola.com>
Reviewed-by: Vijayakumar Gn <vijaygn@motorola.com>
Reviewed-by: Jing Ji <a5705c@motorola.com>
Reviewed-by: Bang Nguyen <bangnguyen@motorola.com>
Submit-Approved: Jira Key

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -733,8 +733,6 @@ on property:vold.decrypt=trigger_restart_min_framework
     class_start main
 
 on property:vold.decrypt=trigger_restart_framework
-    stop surfaceflinger
-    start surfaceflinger
     # BEGIN Motorola, reshma, IKSWP-20874 explicitly restart audioserver
     # during framework restart due to encryption
     stop audioserver
@@ -744,6 +742,9 @@ on property:vold.decrypt=trigger_restart_framework
     exec_start update_verifier
     class_start main
     class_start late_start
+    setprop service.bootanim.exit 0
+    start bootanim
+
 
 on property:vold.decrypt=trigger_shutdown_framework
     class_reset late_start
