Kill hal and core services after real mount
Move Kill the HAL and core services on trigger_shutdown_framework to
on trigger_reset_post_data_framework, were trigger_reset_post_data_framework
will trigger once after the real FS mount happens on /data.

This will avoid killing services at the start of encryption
on FDE devices, which causes Blank screen for along time on bootup.

Change-Id: Ib5ffb76448bded3c1f7378adfc47c59bfc1bf5e8
Signed-off-by: Kanagarathina Kalathi <kalathik@motorola.com>
Reviewed-on: https://gerrit.mot.com/1476112
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Vijayakumar Gn <vijaygn@motorola.com>
Reviewed-by: Dongliang Yue <yuedl1@motorola.com>
Reviewed-by: Guobin Zhang <zhanggb@motorola.com>
Submit-Approved: Jira Key

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -806,6 +806,8 @@ on property:vold.decrypt=trigger_restart_framework
 on property:vold.decrypt=trigger_shutdown_framework
     class_reset late_start
     class_reset main
+
+on property:vold.decrypt=trigger_reset_post_data_framework
     class_reset_post_data core
     class_reset_post_data hal
 
